--- a/styles.css
+++ b/styles.css
@@ -247,6 +247,66 @@
      padding: 0 2px;
  }
 
+ .social-icons {
+     display: flex;
+     justify-content: center;
+     padding: 10px;
+     gap: 10px;
+     /* espaço entre os ícones */
+ }
+
+ .social-icons i {
+     font-size: 24px;
+     transition: transform 0.2s;
+ }
+
+ .fa-linkedin {
+     color: #0077b5;
+ }
+
+ .fa-github {
+     color: #5861b2;
+ }
+
+ /* Efeito hover opcional */
+ .social-icons a:hover i {
+     transform: scale(1.1);
+ }
+
+ footer {
+     background-color: white;
+     color: #2f80e4;
+     text-align: center;
+     padding: 15px 10px;
+     font-size: 0.9em;
+     width: 100%;
+     max-width: 1200px;
+     /* Igual à .container */
+     margin: 30px auto 0 auto;
+     /* Centraliza o footer e adiciona margem superior */
+     border-top: 1px solid white;
+     border-radius: 15px;
+ }
+
+ footer a {
+     color: #5861b2;
+     text-decoration: none;
+     font-weight: 500;
+ }
+
+ footer a:hover {
+     text-decoration: underline;
+ }
+
+ @media (max-width: 480px) {
+     footer {
+         width: 100%;
+         max-width: 100%;
+         margin: 20px auto 0 auto;
+         border-radius: 10px;
+     }
+
+
  @media (max-width: 768px) {
      .header h1 {
          font-size: 2rem;
